WFLY-16130 Refactor clustering API service name generation to eliminate ServiceNameRegistry